2002-04-29  Christian Zuckschwerdt  <zany@triq.net>

	* Erricsson T39m support, req. by Ole Streicher <ole.streicher@gmx.de>
	
2002-03-04  Christian Zuckschwerdt  <zany@triq.net>

	* Try harder to connect. IRDA needs patience.
	* Wrote a man page. Should really be a docbook refentry.

2002-02-11  Christian Zuckschwerdt  <zany@triq.net>

	* cobex now capable of asynch operation

2002-02-09  Christian Zuckschwerdt  <zany@triq.net>

	* Rewrote main using getopt.

2002-02-08  Christian Zuckschwerdt  <zany@triq.net>

	* Fixed BFB protocol (Code 0x01 is ACK not PREPARE...).

2002-02-07  Christian Zuckschwerdt  <zany@triq.net>

	* Implemented BFB protocol.

2002-01-19  Christian Zuckschwerdt  <zany@triq.net>

	* Implemented delete and rename.

2002-01-18  Christian Zuckschwerdt  <zany@triq.net>

	* Initial beta.
	* It's work in progress so expect errors and report/fix then!
