@@ -7,7 +7,6 @@
  * Author:        Christian W. Zuckschwerdt <zany@triq.net>
  * Created at:    Don, 17 Jan 2002 18:27:25 +0100
  * Modified at:   Mon, 29 Apr 2002 22:58:53 +0100
-
  * Modified by:   Christian W. Zuckschwerdt <zany@triq.net>
  *
  *   Copyright (c) 2002 Christian W. Zuckschwerdt <zany@triq.net>
@@ -35,8 +34,31 @@
 
 #include <obexftp/obexftp.h>
 #include <obexftp/client.h>
+/* serial io is broken on win32 */
+#ifndef _WIN32
 #include <cobexbfb/cobex_bfb.h>
 #include <cobexpe/cobex_pe.h>
+#endif /* _WIN32 */
+
+#ifdef _WIN32
+/* OpenOBEX won't define a handler on win32 */
+void DEBUG(unsigned int n, ...) { }
+#endif /* _WIN32 */
+
+#include <g_debug.h>
+
+void g_log_null_handler (const gchar *log_domain,
+			 GLogLevelFlags log_level,
+			 const gchar *message,
+			 gpointer user_data) {
+}
+
+void g_log_print_handler (const gchar *log_domain,
+			 GLogLevelFlags log_level,
+			 const gchar *message,
+			 gpointer user_data) {
+	g_print ("%s\n", message);
+}
 
 static void info_cb(gint event, const gchar *msg, /*@unused@*/ gint len, /*@unused@*/ gpointer data)
 {
@@ -97,6 +119,9 @@ static gboolean cli_connect()
 		return TRUE;
 
 	if (tty != NULL) {
+#ifdef _WIN32
+       		g_print("Custom transport not available\n");
+#else /* _WIN32 */
 		if ((transport != NULL) && !strcasecmp(transport, "ericsson")) {
 			g_print("Custom transport set to 'Ericsson'\n");
 			ctrans = cobex_pe_ctrans (tty);
@@ -104,6 +129,7 @@ static gboolean cli_connect()
 			ctrans = cobex_ctrans (tty);
 			g_print("Custom transport set to 'Siemens'\n");
 		}
+#endif /* _WIN32 */
 	}
 	else {
 		ctrans = NULL;
@@ -141,6 +167,8 @@ static void cli_disconnect()
 
 int main(int argc, char *argv[])
 {
+	int verbose=0;
+	guint log_handler;
 	int c;
 	int most_recent_cmd = 0;
 	gchar *p;
@@ -154,6 +182,11 @@ int main(int argc, char *argv[])
 	if (strstr(argv[0], "mv") != NULL)	most_recent_cmd = 'm';
 	if (strstr(argv[0], "rm") != NULL)	most_recent_cmd = 'k';
 
+	/* by default don't debug anything */
+	log_handler = g_log_set_handler (NULL,
+					 G_LOG_LEVEL_DEBUG | G_LOG_LEVEL_INFO,
+					 g_log_null_handler, NULL);
+
 	while (1) {
 		int option_index = 0;
 		static struct option long_options[] = {
@@ -166,12 +199,13 @@ int main(int argc, char *argv[])
 			{"info",	no_argument, NULL, 'i'},
 			{"move",	required_argument, NULL, 'm'},
 			{"delete",	required_argument, NULL, 'k'},
+			{"verbose",	no_argument, NULL, 'v'},
 			{"help",	no_argument, NULL, 'h'},
 			{"usage",	no_argument, NULL, 'u'},
 			{0, 0, 0, 0}
 		};
 		
-		c = getopt_long (argc, argv, "-d:t:l::c:g:p:im:k:h",
+		c = getopt_long (argc, argv, "-d:t:l::c:g:p:im:k:vh",
 				 long_options, &option_index);
 		if (c == -1)
 			break;
@@ -264,6 +298,17 @@ int main(int argc, char *argv[])
 			most_recent_cmd = c;
 			break;
 
+		case 'v':
+			if (verbose++ > 0)
+				//g_log_default_handler (NULL, G_LOG_LEVEL_DEBUG,
+			       	//		"", NULL);
+				log_handler = g_log_set_handler (NULL,
+					 G_LOG_LEVEL_DEBUG | G_LOG_LEVEL_INFO,
+					 g_log_print_handler, NULL);
+			else
+				/* remove muting handler */
+				g_log_remove_handler (NULL, log_handler);
+			break;
 		case 'h':
 		case 'u':
 			g_print("Usage: %s [-d <dev>] [-s|-a] [-l <dir> ...] [-c <dir>]\n"
@@ -279,6 +324,7 @@ int main(int argc, char *argv[])
 				" -p, --put <SOURCE>          send files\n"
 				" -i, --info                  retrieve misc infos\n\n"
 				" -m, --move <SRC> <DEST>     move files\n"
+				" -v, --verbose               verbose messages\n"
 				" -k, --delete <SOURCE>       delete files\n"
 				" -h, --help, --usage         this help text\n"
 				"\n",
